fixed overflow issue present in galleryWidget component

--- a/assignment-lunacal/src/styles/galleryWidget.css
+++ b/assignment-lunacal/src/styles/galleryWidget.css
@@ -79,7 +79,7 @@
 }
 .gallery-images-container{
     height: 60%;
-    width: 85%;
+    width: 86%;
     display: flex;
     gap: 30px;
     overflow-x: scroll;
